# ric-app-hw-rust

./: Cargo.toml  INFO.yaml  container-tag.yaml  groups  project.config
ci/: Dockerfile
config/: config-file.json
releases/: container-release-app-hw-rust.yaml
src/: hw-rust.rs
